Fix google cpathca iframe gap at bottom

--- a/hosting/style.scss
+++ b/hosting/style.scss
@@ -9,6 +9,10 @@
   }
 }
 
+// Fix google cpathca iframe gap at bottom
+body > iframe {
+  display:none;
+} 
 
 * {
   box-sizing: border-box;
